# PAUL_navigation

./: .gitignore  README.md  communication.sh  update.sh
doc/: HardwareInterface.drawio  paul_urdf.drawio  workspace_architecture.drawio
framework/behaviour/navigation/: package.xml
framework/behaviour/slam/: package.xml
framework/behaviour/teleop/: CMakeLists.txt  package.xml
framework/behaviour/teleop/config/: controller.yaml
framework/behaviour/teleop/launch/: teleop.launch  teleop_joy.launch  teleop_keyboard.launch
framework/behaviour/teleop/src/: teleop_joystick.py
framework/perception/imu/: README.md
framework/perception/lidar/: README.md  package.xml
framework/perception/sonar/: CMakeLists.txt  README.md  package.xml
framework/perception/sonar/firmware/: CMakeLists.txt  firmware.cpp  sonar.cpp
framework/perception/sonar/launch/: sonar.launch
framework/simulation/: package.xml
framework/simulation/launch/: world_sim.launch
framework/simulation/worlds/: empty.world
paul/paul_bringup/: CMakeLists.txt  package.xml
paul/paul_bringup/config/: arm_cfg.rviz  rviz_cfg.rviz
paul/paul_bringup/launch/: arm.launch  arm.launch.save  paul.launch  paul_gen3_lite_bringup.launch
paul/paul_control/: CMakeLists.txt  README.md  package.xml
paul/paul_control/config/: control.yaml  elevation.yaml  localization.yaml  odrive.yaml  propulsion.yaml  teleop.yaml
paul/paul_control/launch/: control.launch  elevation_joy.launch  elevation_position.launch  propulsion.launch  teleop.launch
paul/paul_control/scripts/: base.py  calibration.md  elevation.py  test.py
paul/paul_control/src/: elevation_controller_test.py  elevation_controller_vision.py  elevation_joy.py
paul/paul_description/: CMakeLists.txt  package.xml  paul.urdf.xacro
paul/paul_description/launch/: upload.launch  visualize.launch
paul/paul_description/urdf/: caster.urdf.xacro  paul.gazebo.xacro  paul.urdf.xacro  wheel.urdf.xacro
paul/paul_fsm/: CMakeLists.txt  package.xml
paul/paul_fsm/launch/: fsm.launch
paul/paul_fsm/scripts/: fsm.py
paul/paul_gazebo/: CMakeLists.txt  package.xml
paul/paul_gazebo/launch/: simulation.launch  world.launch
paul/paul_gazebo/worlds/: MTLhouse.world  grocery.world  testbench.world  testbench_simplified.world
paul/paul_gen3_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
paul/paul_gen3_lite_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  paul.srdf  ros_controllers.yaml
paul/paul_gen3_lite_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  paul_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+5 more)
paul/paul_manipulation/: CMakeLists.txt  package.xml
paul/paul_navigation/: CMakeLists.txt  package.xml
(+53 files in other folders)
