<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>paul_control</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for ODrive</description>
  <maintainer email="william.babin-demers@usherbrooke.ca">William Babin-Demers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>odrive_bringup</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
