<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>The teleop package</description>

  <maintainer email="melodic@todo.todo">melodic</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
