<?xml version="1.0"?>
<package format="2">
  <name>sonar</name>
  <version>0.0.0</version>
  <description>The sonar package</description>

  <maintainer email="william.babin-demers@usherbrooke.ca">William Babin-Demers</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_client</depend>
  <exec_depend>rosserial_python</exec_depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
